# ul_ecat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pytest.ini  requirements.txt
.github/workflows/: ci.yml
cmake/: ul_ecatConfig.cmake.in
controllers/lan9252/: CMakeLists.txt  README.md
controllers/lan9252/include/: lan9252.h  lan9252_hal.h  lan9252_regs.h
controllers/lan9252/ports/: README.md
controllers/lan9252/ports/nuttx/: hal_nuttx.h
controllers/lan9252/ports/zephyr/: hal_zephyr.c
controllers/lan9252/src/: lan9252.c  lan9252_hal_weak.c
doc/: architecture.md  etg-conformance.md  lan9252-datasheet-reference.md  mental-model.md  nuttx-module.md  porting-guide.md  repository-layout.md  rtos-lan9252.md  simulator.md  slave-architecture.md  slave-mental-model.md  zephyr-module.md
include/: ul_ecat_al.h  ul_ecat_esc_regs.h  ul_ecat_frame.h  ul_ecat_master.h  ul_ecat_osal.h  ul_ecat_slave.h  ul_ecat_slave_controller.h  ul_ecat_slave_od.h  ul_ecat_transport.h
nuttx/: CMakeLists.txt  Kconfig  Make.defs  Make.defs.slave_lan9252  ul_ecat_slave_lan9252_sources.cmake  ul_ecat_sources.cmake
ports/lan9252/: README.md
ports/lan9252/nuttx/: hal_nuttx.c
ports/lan9252/zephyr/: hal_zephyr.c
samples/common/: ul_ecat_servo_sample.h
samples/nuttx/ul_ecat_scan/: Kconfig  Makefile  defconfig.snippet  ul_ecat_scan_main.c
samples/nuttx/ul_ecat_servo/: Kconfig  Makefile  README.md  defconfig.snippet  ul_ecat_servo_main.c
samples/zephyr/ul_ecat_scan/: CMakeLists.txt  prj.conf
samples/zephyr/ul_ecat_scan/src/: main.c
samples/zephyr/ul_ecat_servo/: CMakeLists.txt  README.md  app.overlay  prj.conf
samples/zephyr/ul_ecat_servo/boards/: esp32_devkitc_wroom_procpu.overlay
samples/zephyr/ul_ecat_servo/src/: main.c
scripts/: ci_build_zephyr_samples.sh  ci_verify_nuttx_integration.sh  ecat_ctypes.py  ecat_frame.py  ecat_slave_sim.py  ecat_wire.py  ethercat_controller_sim.py  gen_slave_data.py  run_e2e_l2_scan.py  ul_ecat_tool.py
src/: ul_ecat_al.c  ul_ecat_frame.c  ul_ecat_master.c
src/master/: ul_ecat_master.c
src/osal/: osal_linux.c  osal_nuttx.c  osal_zephyr.c
src/slave/: ul_ecat_esc.c  ul_ecat_esc.h  ul_ecat_slave.c  ul_ecat_slave_al.c  ul_ecat_slave_al.h  ul_ecat_slave_coe.c  ul_ecat_slave_coe.h  ul_ecat_slave_controller.c  ul_ecat_slave_controller_lan9252.c  ul_ecat_slave_mailbox.c  ul_ecat_slave_mailbox.h  ul_ecat_slave_od.c  ul_ecat_slave_pdu.c  ul_ecat_slave_sm.h
src/transport/: transport_linux.c  transport_nuttx.c  transport_zephyr.c  transport_zephyr_netdev.c
tests/: CMakeLists.txt  lan9252_full_mock.c  lan9252_full_mock.h  test_al.cpp  test_al_fsm.cpp  test_coe.cpp  test_frame.cpp  test_frame_negative.cpp  test_integration_sim.py  test_mailbox.cpp  test_master_smoke.cpp  test_od.cpp  test_slave.cpp  test_slave_controller_mock.cpp  test_socket_harness.py  test_tool.py
tools/: ul_ecat_slave_harness.c  ul_ecat_tool.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
